# python-devops

./: CHANGELOG.md  pyproject.toml
.github/workflows/: publish.yaml  py-ci.yaml
src/simple_http_checker/: checker.py  cli.py
