[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-http-rajesh"
version = "1.3.2"
description = "a simple cli tool to check the status of urls"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.28,<3.0",
  "click>=8.0,<9.0"
]
[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "mypy",
  "bandit",
  "types-requests",
  "pytest",
  "pytest-mock"
]

[project.scripts]
check-urls = "simple_http_checker.cli:main"

[tool.ruff]
line-length = 65

[tool.black]
line-length = 65

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
addopts = "-rA -S -v"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_release = true
hvcs = "github"
commit_message = "chore(release): {version}"
[tool.semantic_release.branches.main]
match= "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor"
]

minor_tags = ["feat"]
patch_tags = ["fix"]





